VisualForceAssignment_2/src/objects/PurchaseOrderLineItems__c.object
<CustomObject>
    <fields>
        <fullName>ESmartPack__c</fullName>
        <defaultValue>false</defaultValue>
        <label>E-Smart Pack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>PurchaseOrderLineItems</relationshipLabel>
        <relationshipName>PurchaseOrderLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PurchaseOrder__c</fullName>
        <label>PurchaseOrder</label>
        <referenceTo>PurchaseOrder__c</referenceTo>
        <relationshipLabel>PurchaseOrderLineItems</relationshipLabel>
        <relationshipName>PurchaseOrderLineItems_PurchaseOrder</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <formula>Quantity__c  *  UnitPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TotalPrice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>UnitPrice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PurchaseOrderLineItem</label>
    <listViews>
        <fullName>All</fullName>
        <columns>PurchaseOrder__c</columns>
        <columns>Quantity__c</columns>
        <columns>TotalPrice__c</columns>
        <columns>UnitPrice__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PurchaseOrderLineItems Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PurchaseOrderLineItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>